# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "prometheus-async"
dynamic = ["version"]
authors = [{ name = "Hynek Schlawack", email = "hs@ox.cx" }]
requires-python = ">=3.7"
description = "Async helpers for prometheus_client."
dependencies = [
    # Keep min. version in-sync with testenv:oldest!
    "prometheus_client >= 0.8.0",
    "importlib_metadata;python_version<'3.8'",
    "typing_extensions >= 3.10.0; python_version<'3.10'",
    "wrapt",
]
license = { text = "MIT" }
readme = { content-type = "text/markdown", file = "README.md" }
keywords = ["metrics", "prometheus", "twisted", "asyncio", "async"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Documentation = "https://prometheus-async.readthedocs.io/"
Changelog = "https://prometheus-async.readthedocs.io/en/stable/changelog.html"
"Source Code" = "https://github.com/hynek/prometheus-async/"
Funding = "https://hynek.me/say-thanks/"
Ko-fi = "https://ko-fi.com/the_hynek"

[project.optional-dependencies]
aiohttp = ["aiohttp>=3"]
consul = ["aiohttp>=3"]
twisted = ["twisted"]
tests = ["coverage[toml]", "pytest", "pytest-asyncio"]
docs = [
    "prometheus-async[aiohttp,twisted]",
    "furo",
    "myst-parser",
    "sphinx-notfound-page",
    "sphinx",
    "sphinxcontrib-asyncio",
]
dev = [
    "prometheus-async[tests,twisted,docs]",
    "pytest-twisted",
    "mypy",
]


[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "no-guess-dev" }


[tool.pytest.ini_options]
addopts = ["-ra", "--strict-markers", "--strict-config"]
xfail_strict = true
testpaths = "tests"
filterwarnings = [
    "once::Warning",
    "ignore:::aiohttp[.*]",
    "ignore:::importlib[.*]",
    "ignore::DeprecationWarning:twisted.python.threadable",
]
asyncio_mode = "auto"


[tool.coverage.run]
parallel = true
branch = true
source = ["prometheus_async"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    # typing-related code
    "^if (False|TYPE_CHECKING):",
    ": \\.\\.\\.$",
    "^ +\\.\\.\\.$",
    "-> ['\"]?NoReturn['\"]?:",
]
omit = ["src/prometheus_async/types.py"]


[tool.black]
line-length = 79


[tool.isort]
profile = "attrs"


[tool.mypy]
warn_unused_ignores = true
follow_imports = "normal"
ignore_missing_imports = true
disallow_untyped_calls = true
warn_no_return = true
warn_redundant_casts = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "conftest.*"
ignore_errors = true
