# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "prometheus-async"
dynamic = ["version"]
authors = [{ name = "Hynek Schlawack", email = "hs@ox.cx" }]
requires-python = ">=3.7"
description = "Async helpers for prometheus_client."
dependencies = [
    # Keep min. version in-sync with testenv:oldest!
    "prometheus_client >= 0.8.0",
    "importlib_metadata;python_version<'3.8'",
    "typing_extensions >= 3.10.0; python_version<'3.10'",
    "wrapt",
]
license = { text = "MIT" }
readme = { content-type = "text/markdown", file = "README.md" }
keywords = ["metrics", "prometheus", "twisted", "asyncio", "async"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Documentation = "https://prometheus-async.readthedocs.io/"
Changelog = "https://prometheus-async.readthedocs.io/en/stable/changelog.html"
"Source Code" = "https://github.com/hynek/prometheus-async/"
Funding = "https://hynek.me/say-thanks/"

[project.optional-dependencies]
aiohttp = ["aiohttp>=3"]
consul = ["aiohttp>=3"]
twisted = ["twisted"]
tests = ["coverage[toml]", "pytest", "pytest-asyncio"]
docs = [
    "prometheus-async[aiohttp,twisted]",
    "furo",
    "myst-parser",
    "sphinx-notfound-page",
    # Spinx 6 breaks sphinxcontrib-asyncio
    "sphinx<6",
    "sphinxcontrib-asyncio",
]
dev = ["prometheus-async[tests,twisted,docs]", "mypy"]


[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }



[tool.pytest.ini_options]
addopts = ["-ra", "--strict-markers", "--strict-config"]
xfail_strict = true
testpaths = "tests"
filterwarnings = [
    "once::Warning",
    "ignore:::aiohttp[.*]",
    "ignore:::importlib[.*]",
    "ignore::DeprecationWarning:twisted.python.threadable",
]
asyncio_mode = "auto"


[tool.coverage.run]
parallel = true
branch = true
source = ["prometheus_async"]

[tool.coverage.paths]
source = ["src", ".tox/py*/**/site-packages"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    # typing-related code
    "^if (False|TYPE_CHECKING):",
    ": \\.\\.\\.$",
    "^ +\\.\\.\\.$",
    "-> ['\"]?NoReturn['\"]?:",
]
omit = ["src/prometheus_async/types.py"]


[tool.black]
line-length = 79


[tool.mypy]
strict = true

show_error_codes = true
enable_error_code = ["ignore-without-code"]
ignore_missing_imports = true

warn_return_any = false
allow_any_generics = true
allow_untyped_decorators = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.typing.*"
ignore_errors = false

[[tool.mypy.overrides]]
module = "conftest.*"
ignore_errors = true


[tool.ruff]
src = ["src", "tests", "docs/conf.py"]
select = [
    "E",   # pycodestyle
    "W",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "YTT", # flake8-2020
    "S",   # flake8-bandit
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "T10", # flake8-debugger
    "ISC", # flake8-implicit-str-concat
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "DTZ", # flake8-datetimez
    "I",   # isort
    "PGH", # pygrep-hooks
    "PLC", # Pylint
    "PIE", # flake8-pie
    "RUF", # ruff
]
ignore = [
    "RUF001", # leave my smart characters alone
    "S101",   # assert
    "SIM300", # Yoda rocks in asserts
]

[tool.ruff.isort]
lines-between-types = 1
lines-after-imports = 2
